--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "homegrown-brain",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,17 +10,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.1.6",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "langchain": "^0.0.103",
+    "mongodb": "^5.7.0",
     "next": "13.4.9",
+    "path": "^0.12.7",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "url": "^0.11.1",
+    "xlsx": "^0.18.5",
+    "zod": "^3.21.4"
   }
 }
